[C08]: Request authentication before send request
